after first code review